# 2026-capstone-45

./: .dockerignore  .gitignore  Dockerfile  README.md  add-all-documents.py  analyze-layout.py  analyze_layout.py  call_llm.py  compose.yaml  delete-artifacts.py  dump_layout_pickle.py  generate-artifacts.py  generate-document.py  generate-document_ver2.py  image-to-bbox.py  image_to_bbox.py  main.py  pyproject.toml  render_image.py  test_openai.py  view-ocr.py
0. llm2doc 백업/: __init__.py  analyze_layout.py  create_document.py  create_document_ver2.py  debug_trace.py  fill_document.py  font_analyzer.py  render_image.py  tool_ask_user_question.py  tool_search_source_document.py  tool_search_source_document_original.py  tool_search_source_document_plain.py  tool_search_source_document_ver2.py  util.py
0. llm2doc 백업/dependency/: with_thread_pool.py
0. llm2doc 백업/semantic_pipeline/: __init__.py  fusion.py  llm2doc_adapter.py  reference_pipeline.py  semantic.py  semantic_engine.py  semantic_types.py  types.py  visualize.py
0. llm2doc 백업/semantic_pipeline/analysis/: archetypes.py
0. llm2doc 백업/semantic_pipeline/parsing/: llm2doc_adapter.py
0. llm2doc 백업/semantic_pipeline/pipeline/: __init__.py  reference_pipeline.py
0. llm2doc 백업/semantic_pipeline/semantic/: __init__.py  semantic.py  semantic_context.py  semantic_engine.py  semantic_schema.py  semantic_types.py
0. llm2doc 백업/semantic_pipeline/visualization/: __init__.py  visualize.py
0. llm2doc 백업/백업1_로그 개선 완료본/: add_all_documents.py  font.py  save_chat.py  server.py  tool_search_source_document.py  util.py
0. llm2doc 백업/백업1_로그 개선 완료본/artifact/: base.py  run.py
0. llm2doc 백업/백업1_로그 개선 완료본/context/: document.py  pipeline.py
0. llm2doc 백업/백업1_로그 개선 완료본/dependency/: __init__.py  with_db.py
0. llm2doc 백업/백업1_로그 개선 완료본/dto/: document.py
0. llm2doc 백업/백업1_로그 개선 완료본/entity/: chat.py  chat_source.py  config.py  document.py  document_image.py  file.py  message.py
0. llm2doc 백업/백업1_로그 개선 완료본/repository/: file.py
0. llm2doc 백업/백업1_로그 개선 완료본/route/: font.py
0. llm2doc 백업/백업2_생성 도중에 검열하는 방식_폐기/: create_document.py
0. llm2doc 백업/백업4-2_table_row_retreval/: 4-2 설명.md  __init__.py  bm25_search.py  create_document.py  table_retrieval.py  tool_fetch_source_document.py  tool_search_source_document.py
0. llm2doc 백업/백업4_숫자 매칭해서 지우는 파트까지/: create_document.py  debug_render.py  debug_trace.py  number_guard.py  tesseract.py  tool_ask_user_question.py
0. llm2doc 백업/백업5_passage 기반 분석&plan/: create_document.py  number_guard.py  passage_plan.py  render_image.py  table_retrieval.py  tool_fetch_source_document.py
0. llm2doc 백업/백업6_passage_role 추가/: create_document.py  debug_render.py  debug_trace.py  passage_plan.py  passage_visual_backfill.py  passage_visual_report.py  server.py  tool_search_source_document.py
code/: archetypes.py  canonicalize.py  cli.py  generation_pipeline.py  generation_schema.py  ocr_locator.py  reference_pipeline.py  render_pipeline.py  semantic.py  semantic_context.py  semantic_engine.py  semantic_rules.py  template.py  visualize.py
code/generation/: generation_pipeline.py  generation_schema.py  generation_types.py
code/generation_backends/: __init__.py  qwen_api.py
code/semantic_backends/: __init__.py
docs/: _config.yml  deployment.md  development.md  index.md  preview.ps1  preview.sh
llm2doc/: add_all_documents.py  analyze_layout.py  create_document.py  debug_trace.py  dummy_executor.py  dummy_tracer.py  fill_document.py  font.py  font_analyzer.py  render_image.py  save_chat.py  server.py  tesseract.py  tool_ask_user_question.py  tool_fetch_source_document.py  tool_search_source_document.py  util.py
llm2doc/artifact/: base.py  run.py
llm2doc/context/: document.py  document_pipeline.py  write.py
llm2doc/dependency/: with_db.py
llm2doc/dto/: document.py
llm2doc/entity/: __init__.py  chat.py  document.py  document_image.py  document_log.py  file.py  message.py
llm2doc/hwp/: __init__.py  _hwp.py
llm2doc/repository/: artifact.py  chat.py  document.py  file.py
llm2doc/route/: chat.py  document.py
llm2doc/semantic_pipeline/: reference_pipeline.py
llm2doc/template/: _fill.py  _template_1.py
test/: test_qwen_api.py  test_tool_search_source_document.py
tests/: test_debug_trace.py  test_tool_search_source_document.py
web/: .dockerignore  .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  constant.ts  index.css  main.tsx  types.ts
문서/: 00. Memo.md  01. plan.md  02. reference_layout.md  03. reference_semantic.md  04. financial_report_v1_semantic_mapping_spec.md  08. semantic_qwen_design_2.md  09. gen_role.md  10-1. Semantic 정리.md  10. 1차 정리.md  11-1. section.md  11-2. section_artifact.md  12. section_generation.md  13. section 정리.md  14. section qwen detector.md  15. semantic_embedding.md  16_1. 디버깅 추가.md  16_2. ai-decision-tracing.md  17. 1차 후보 수집.md  17_1. 1차 후보 수집.md  17_2. 1차 후보 수집 구현 계획.md  18. ui 통합 시작.md  19. 로그 설계안.md  20. 전체 프로세스 설명.md  21. passage 설계안.md  _01. 기록.md  _02. To Do.md  financial2-00_review.md  integrate.md  reference_review_guide.md
코드/: __init__.py  adapters.py  cli.py  generation_types.py  semantic.py  semantic_engine.py  semantic_types.py
코드/generation/: __init__.py  generation_pipeline.py
코드/generation_backends/: __init__.py  qwen_transformers.py
코드/semantic_backends/: __init__.py  qwen_transformers.py
(+120 files in other folders)
