[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2.4", # https://github.com/PaddlePaddle/PaddleOCR/issues/17597
    "openai>=2.28.0",
    "paddleocr[all]==3.4.0",
    "paddlepaddle==3.3.0; sys_platform != 'linux' and sys_platform != 'win32'",
    "paddlepaddle-gpu==3.3.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "pillow>=10,<11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "skia-python>=144.0.post1",
    "nvidia-cublas-cu12; sys_platform == 'win32'",
    "nvidia-cudnn-cu12; sys_platform == 'win32'",
    "beartype>=0.22.9",
    "pydantic>=2.12.5",
    "html2text>=2025.4.15",
    "beautifulsoup4>=4.14.3",
]

[tool.setuptools.packages.find]
include = ["llm2doc*"]

[tool.uv.sources]
paddlepaddle = [
    { index = "paddlepaddle-cpu" },
]
paddlepaddle-gpu = [
    { index = "paddlepaddle-cu129" },
]

[[tool.uv.index]]
name = "paddlepaddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu"
explicit = true

[[tool.uv.index]]
name = "paddlepaddle-cu129"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129"
explicit = true
