[project]
name = "llm2doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2.4", # https://github.com/PaddlePaddle/PaddleOCR/issues/17597
    "openai>=2.28.0",
    "paddleocr[all]==3.4.0",
    "pillow>=10,<11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "skia-python>=144.0.post1",
    "beartype>=0.22.9",
    "pydantic>=2.12.5",
    "html2text>=2025.4.15",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "opentelemetry-exporter-otlp-proto-grpc==1.25.0", # https://github.com/chroma-core/chroma/issues/2571
    "html2image>=2.0.7",
    "pytesseract>=0.3.13",
    "pyqt6>=6.11.0",
    "matplotlib>=3.10.8",
    "scikit-image>=0.25.2",
    "tesserocr>=2.10.0",
]

[project.optional-dependencies]
cpu = [
    "paddlepaddle==3.3.0",
]
cuda = [
    "paddlepaddle-gpu==3.3.0",
    "nvidia-cublas-cu12; sys_platform == 'win32'",
    "nvidia-cudnn-cu12; sys_platform == 'win32'",
]

[tool.setuptools.packages.find]
include = ["llm2doc*"]

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "basic"

[tool.uv.sources]
paddlepaddle = [
    { index = "paddlepaddle-cpu" },
]
paddlepaddle-gpu = [
    { index = "paddlepaddle-cu129" },
]

# https://github.com/simonflueckiger/tesserocr-windows_build/releases
tesserocr = [
    { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp314-cp314-win_amd64.whl", marker = "sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.14'" },
    { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp313-cp313-win_amd64.whl", marker = "sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.13'" },
    { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.12'" },
    { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.11'" },
    { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp310-cp310-win_amd64.whl", marker = "sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.10'" },
]

[[tool.uv.index]]
name = "paddlepaddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu"
explicit = true

[[tool.uv.index]]
name = "paddlepaddle-cu129"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129"
explicit = true
